# climate-craft-tech

./: .gitignore  README.md
voiceModule/ClimateCraft/ClimateVoice_SR/: CMakeLists.txt  sdkconfig.defaults  setup.sh
voiceModule/ClimateCraft/ClimateVoice_SR/main/: CMakeLists.txt  going_to_sleep.h  idf_component.yml  main.c  moving_down.h  moving_up.h  stopped.h  welcome.h  yes.h
voiceModule/ClimateCraft/ClimateVoice_SR/main/hardeware_driver/: bsp_board.c  bsp_board.h
voiceModule/ClimateCraft/ClimateVoice_SR/main/rgb_led_driver/: rgb_led_driver.c  rgb_led_driver.h
voiceModule/ClimateCraft/ClimateVoice_SR/main/speech_det_driver/: mic_speech.c  mic_speech.h
voiceModule/ClimateCraft/ClimateVoice_SR/tools/: wav_to_header.py
voice_tool_chain/esp/esp-idf/components/bt/host/nimble/nimble/nimble/host/src/: ble_aes_ccm.c  ble_att.c  ble_att_clt.c  ble_att_cmd.c  ble_att_svr.c  ble_cs.c  ble_ead.c  ble_eatt.c  ble_eddystone.c  ble_gap.c  ble_gattc.c  ble_gattc_cache.c  ble_gattc_cache_conn.c  ble_gatts.c  ble_gatts_lcl.c  ble_hs.c  ble_hs_adv.c  ble_hs_atomic.c  ble_hs_conn.c  ble_hs_flow.c  ble_hs_hci.c  ble_hs_hci_cmd.c  ble_hs_hci_evt.c  ble_hs_hci_util.c  ble_hs_id.c  ble_hs_iso.c  ble_hs_log.c  ble_hs_mbuf.c  ble_hs_misc.c  ble_hs_mqueue.c  ble_hs_periodic_sync.c  ble_hs_pvcy.c  ble_hs_resolv.c  ble_hs_shutdown.c  ble_hs_startup.c  ble_hs_stop.c  ble_ibeacon.c  ble_l2cap.c  ble_l2cap_coc.c  ble_l2cap_sig.c  (+9 more)
voice_tool_chain/esp/esp-idf/components/bt/host/nimble/nimble/nimble/transport/src/: transport.c
(+25 files in other folders)
